[gd_scene load_steps=25 format=4 uid="uid://ccsux4omfy5xd"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_gwqxg"]
[ext_resource type="PackedScene" uid="uid://dxvsatf2vb8ye" path="res://prefabs/Player.tscn" id="1_omc5f"]
[ext_resource type="Texture2D" uid="uid://0b0vnf1whp12" path="res://sprites/white thing.png" id="2_84fr2"]
[ext_resource type="Texture2D" uid="uid://dhmuorcflbps3" path="res://sprites/green and pink thing.png" id="4_6u0hx"]
[ext_resource type="Texture2D" uid="uid://iejw6nd8dt5g" path="res://sprites/laser.png" id="5_4tqgi"]
[ext_resource type="PackedScene" uid="uid://h27vqf2ayicu" path="res://prefabs/portal.tscn" id="5_l14ja"]
[ext_resource type="Script" path="res://scenes/foreground_kill.gd" id="5_nvpf4"]
[ext_resource type="Texture2D" uid="uid://bxktpq87pyurs" path="res://sprites/sign v4.png" id="6_yh1vv"]
[ext_resource type="Texture2D" uid="uid://c6mntan61p8vd" path="res://sprites/sign v1.png" id="7_qkgh4"]
[ext_resource type="Texture2D" uid="uid://hgi6hrkrbhv6" path="res://sprites/sign v3.png" id="8_1vcgl"]
[ext_resource type="Texture2D" uid="uid://claoam8ofwm04" path="res://sprites/sign v2 (1).png" id="9_5a6xm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bh6b1"]
resource_name = "White"
texture = ExtResource("2_84fr2")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c2kfj"]
texture = ExtResource("4_6u0hx")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tljk4"]
resource_name = "Grey"
texture = ExtResource("2_84fr2")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_afr0m"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_bh6b1")
sources/1 = SubResource("TileSetAtlasSource_c2kfj")
sources/2 = SubResource("TileSetAtlasSource_tljk4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6jlp2"]
texture = ExtResource("5_4tqgi")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, 3, 16, 2.75, 16, 16, -2.25, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 2.75, 2.75, 3, 3, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 2.75, 16, 3, 16, 7.5, -16, 7.25)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -3.25, -16, -3.25, 3.25, 16, 3.5, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 3.75, 3, 3.75, 2.75, -16, 16, -16, 16, 16, -16, 16)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, 2.75, 16, 2.75, -2, -16, -1.75)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -4.25, -3.5, -3.5, -3.5, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_kx11y"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_6jlp2")

[sub_resource type="TileSet" id="TileSet_t3cor"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3sfa"]
size = Vector2(348, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1poa"]
size = Vector2(799, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1w1g"]
size = Vector2(290, 151)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5orsn"]
size = Vector2(699, 280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbw34"]
size = Vector2(247, 228)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tciq"]
size = Vector2(291, 1036)

[node name="Level ONE - Tutorial" type="Node2D"]
script = ExtResource("1_gwqxg")
levelName = "tutorial"

[node name="player" parent="." instance=ExtResource("1_omc5f")]
unique_name_in_owner = true

[node name="Foreground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD8//z/AAAAAAAAAAALAAQAAAAAAAAAAAAMAPr/AAAAAAAAAAAMAAgAAAAAAAAAAAAXAPr/AAAAAAAAAAAXAAIAAAAAAAAAAAAdAPr/AAAAAAAAAAAdAAIAAAAAAAAAAAAeAPr/AAAAAAAAAAAfAPr/AAAAAAAAAAAgAPr/AAAAAAAAAAAhAPr/AAAAAAAAAAAiAPr/AAAAAAAAAAAjAPr/AAAAAAAAAAAkAPr/AAAAAAAAAAAlAPr/AAAAAAAAAAAmAPr/AAAAAAAAAAAnAPr/AAAAAAAAAAAoAPr/AAAAAAAAAAApAPr/AAAAAAAAAAAqAPr/AAAAAAAAAAArAPr/AAAAAAAAAAAsAPr/AAAAAAAAAAAtAPr/AAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD9//r/AAAAAAAAAAD9/wIAAAAAAAAAAAD+//r/AAAAAAAAAAD+/wIAAAAAAAAAAAD///r/AAAAAAAAAAD//wIAAAAAAAAAAAAAAPr/AAAAAAAAAAAAAAIAAAAAAAAAAAABAPr/AAAAAAAAAAABAAIAAAAAAAAAAAACAPr/AAAAAAAAAAACAAIAAAAAAAAAAAADAPr/AAAAAAAAAAADAAIAAAAAAAAAAAAEAPr/AAAAAAAAAAAEAAIAAAAAAAAAAAAFAPr/AAAAAAAAAAAFAAIAAAAAAAAAAAAGAPr/AAAAAAAAAAAGAAIAAAAAAAAAAAAHAPr/AAAAAAAAAAAHAAIAAAAAAAAAAAAIAPr/AAAAAAAAAAAIAAIAAAAAAAAAAAAJAPr/AAAAAAAAAAAJAAIAAAAAAAAAAAAKAPr/AAAAAAAAAAAKAAIAAAAAAAAAAAALAPr/AAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAANAPr/AAAAAAAAAAANAAgAAAAAAAAAAAAOAPr/AAAAAAAAAAAOAAgAAAAAAAAAAAAPAPr/AAAAAAAAAAAPAAgAAAAAAAAAAAAQAPr/AAAAAAAAAAAQAAgAAAAAAAAAAAARAPr/AAAAAAAAAAARAAgAAAAAAAAAAAASAPr/AAAAAAAAAAASAAgAAAAAAAAAAAATAPr/AAAAAAAAAAATAAgAAAAAAAAAAAAUAPr/AAAAAAAAAAAUAAgAAAAAAAAAAAAVAPr/AAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAWAPr/AAAAAAAAAAAWAAIAAAAAAAAAAAAYAPr/AAAAAAAAAAAYAAIAAAAAAAAAAAAZAPr/AAAAAAAAAAAZAAIAAAAAAAAAAAAaAPr/AAAAAAAAAAAaAAIAAAAAAAAAAAAbAPr/AAAAAAAAAAAbAAIAAAAAAAAAAAAcAPr/AAAAAAAAAAAcAPv/AAAAAAAAAAAcAPz/AAAAAAAAAAAcAP3/AAAAAAAAAAAcAP7/AAAAAAAAAAAcAP//AAAAAAAAAAAcAAIAAAAAAAAAAAAeAAIAAAAAAAAAAAAfAAIAAAAAAAAAAAAgAAIAAAAAAAAAAAAhAAIAAAAAAAAAAAAiAAIAAAAAAAAAAAAjAAIAAAAAAAAAAAAkAAIAAAAAAAAAAAAlAAIAAAAAAAAAAAAmAAIAAAAAAAAAAAAnAAIAAAAAAAAAAAAoAAIAAAAAAAAAAAApAAIAAAAAAAAAAAAqAAIAAAAAAAAAAAArAAIAAAAAAAAAAAAsAAIAAAAAAAAAAAAtAOn/AAAAAAAAAAAtAO//AAAAAAAAAAAtAPD/AAAAAAAAAAAtAPH/AAAAAAAAAAAtAPL/AAAAAAAAAAAtAPP/AAAAAAAAAAAtAPT/AAAAAAAAAAAtAPX/AAAAAAAAAAAtAPb/AAAAAAAAAAAtAPf/AAAAAAAAAAAtAPj/AAAAAAAAAAAtAPn/AAAAAAAAAAAtAPv/AAAAAAAAAAAtAPz/AAAAAAAAAAAtAAAAAAAAAAAAAAAtAAEAAAAAAAAAAAAtAAIAAAAAAAAAAAAtAAMAAAAAAAAAAAAtAAQAAAAAAAAAAAAtAAUAAAAAAAAAAAAtAAYAAAAAAAAAAAAtAAcAAAAAAAAAAAAtAAgAAAAAAAAAAAAtAAkAAAAAAAAAAAAtAAoAAAAAAAAAAAAtAAsAAAAAAAAAAAAuAOn/AAAAAAAAAAAuAAsAAAAAAAAAAAAvAOn/AAAAAAAAAAAvAAsAAAAAAAAAAAAwAOn/AAAAAAAAAAAwAAsAAAAAAAAAAAAxAOn/AAAAAAAAAAAxAAsAAAAAAAAAAAAyAOn/AAAAAAAAAAAyAAsAAAAAAAAAAAAzAOn/AAAAAAAAAAAzAAsAAAAAAAAAAAA0AOn/AAAAAAAAAAA0AAsAAAAAAAAAAAA1AOn/AAAAAAAAAAA1AAsAAAAAAAAAAAA2AOn/AAAAAAAAAAA2AAsAAAAAAAAAAAA3AOn/AAAAAAAAAAA3AAsAAAAAAAAAAAA4AOn/AAAAAAAAAAA4AOr/AAAAAAAAAAA4AOv/AAAAAAAAAAA4AOz/AAAAAAAAAAA4AO3/AAAAAAAAAAA4APH/AAAAAAAAAAA4APL/AAAAAAAAAAA4APP/AAAAAAAAAAA4APT/AAAAAAAAAAA4APX/AAAAAAAAAAA4APb/AAAAAAAAAAA4APf/AAAAAAAAAAA4APj/AAAAAAAAAAA4APn/AAAAAAAAAAA4APr/AAAAAAAAAAA4APv/AAAAAAAAAAA4APz/AAAAAAAAAAA4AP3/AAAAAAAAAAA4AP7/AAAAAAAAAAA4AP//AAAAAAAAAAA4AAAAAAAAAAAAAAA4AAEAAAAAAAAAAAA4AAIAAAAAAAAAAAA4AAMAAAAAAAAAAAA4AAQAAAAAAAAAAAA4AAUAAAAAAAAAAAA4AAYAAAAAAAAAAAA4AAcAAAAAAAAAAAA4AAgAAAAAAAAAAAA4AAkAAAAAAAAAAAA4AAoAAAAAAAAAAAA4AAsAAAAAAAAAAAA5AOn/AAAAAAAAAAA5APL/AAAAAAAAAAA5APX/AAAAAAAAAAA6AOn/AAAAAAAAAAA6APL/AAAAAAAAAAA6APX/AAAAAAAAAAA7AOn/AAAAAAAAAAA7APL/AAAAAAAAAAA7APX/AAAAAAAAAAA8AOn/AAAAAAAAAAA8APL/AAAAAAAAAAA8APX/AAAAAAAAAAA9AOn/AAAAAAAAAAA9APL/AAAAAAAAAAA9APX/AAAAAAAAAAA+AOn/AAAAAAAAAAA+APL/AAAAAAAAAAA+APX/AAAAAAAAAAA+APj/AAAAAAAAAAA+APn/AAAAAAAAAAA+APr/AAAAAAAAAAA+APv/AAAAAAAAAAA+APz/AAAAAAAAAAA+AP3/AAAAAAAAAAA+AP7/AAAAAAAAAAA+AP//AAAAAAAAAAA+AAAAAAAAAAAAAAA+AAEAAAAAAAAAAAA+AAIAAAAAAAAAAAA+AAMAAAAAAAAAAAA+AAQAAAAAAAAAAAA/AOn/AAAAAAAAAAA/APL/AAAAAAAAAAA/APX/AAAAAAAAAAA/APj/AAAAAAAAAABAAOn/AAAAAAAAAABAAPL/AAAAAAAAAABAAPX/AAAAAAAAAABAAPj/AAAAAAAAAABBAOn/AAAAAAAAAABBAPL/AAAAAAAAAABBAPX/AAAAAAAAAABBAPj/AAAAAAAAAABCAOn/AAAAAAAAAABCAPL/AAAAAAAAAABCAPX/AAAAAAAAAABCAPj/AAAAAAAAAABDAOn/AAAAAAAAAABDAPL/AAAAAAAAAABDAPX/AAAAAAAAAABDAPj/AAAAAAAAAABEAOn/AAAAAAAAAABEAPL/AAAAAAAAAABEAPX/AAAAAAAAAABEAPj/AAAAAAAAAABFAOn/AAAAAAAAAABFAPL/AAAAAAAAAABFAPX/AAAAAAAAAABFAPj/AAAAAAAAAABGAOn/AAAAAAAAAABGAPL/AAAAAAAAAABGAPX/AAAAAAAAAABGAPj/AAAAAAAAAABHAOn/AAAAAAAAAABHAPL/AAAAAAAAAABHAPj/AAAAAAAAAABIAOn/AAAAAAAAAABIAPj/AAAAAAAAAABJAOn/AAAAAAAAAABJAPj/AAAAAAAAAABKAOn/AAAAAAAAAABKAPj/AAAAAAAAAABLAOn/AAAAAAAAAABLAPj/AAAAAAAAAABMAOn/AAAAAAAAAABMAPj/AAAAAAAAAABNAOn/AAAAAAAAAABNAPj/AAAAAAAAAABOAOn/AAAAAAAAAABPAOn/AAAAAAAAAABQAOn/AAAAAAAAAABRAOn/AAAAAAAAAABSAOn/AAAAAAAAAABTAOn/AAAAAAAAAABUAOn/AAAAAAAAAABVAOn/AAAAAAAAAABWAOn/AAAAAAAAAABWAOr/AAAAAAAAAABWAOv/AAAAAAAAAABWAPT/AAAAAAAAAABWAPX/AAAAAAAAAABWAPP/AAAAAAAAAAAtAOr/AAAAAAAAAAAtAOv/AAAAAAAAAAAtAOz/AAAAAAAAAAAtAO3/AAAAAAAAAAAtAO7/AAAAAAAAAAA+AAsAAAAAAAAAAAA8AAsAAAAAAAAAAAA7AAsAAAAAAAAAAAA6AAsAAAAAAAAAAAA5AAsAAAAAAAAAAAA9AAsAAAAAAAAAAAA/AAsAAAAAAAAAAABAAAsAAAAAAAAAAABBAAsAAAAAAAAAAABCAAsAAAAAAAAAAABDAAsAAAAAAAAAAABEAAsAAAAAAAAAAABFAAsAAAAAAAAAAABGAAsAAAAAAAAAAABHAAsAAAAAAAAAAABIAAsAAAAAAAAAAABJAAsAAAAAAAAAAABKAAsAAAAAAAAAAABLAAsAAAAAAAAAAABMAAsAAAAAAAAAAABNAAsAAAAAAAAAAABOAAsAAAAAAAAAAABPAAsAAAAAAAAAAABQAAsAAAAAAAAAAABRAAsAAAAAAAAAAABSAAsAAAAAAAAAAABTAAsAAAAAAAAAAABUAAsAAAAAAAAAAABVAAsAAAAAAAAAAABWAAsAAAAAAAAAAABXAAsAAAAAAAAAAABYAAsAAAAAAAAAAABZAAsAAAAAAAAAAABaAAsAAAAAAAAAAABbAAsAAAAAAAAAAABcAAsAAAAAAAAAAABdAAsAAAAAAAAAAABeAAsAAAAAAAAAAABfAAsAAAAAAAAAAABgAAsAAAAAAAAAAABhAAsAAAAAAAAAAABiAAsAAAAAAAAAAABjAAsAAAAAAAAAAABkAAsAAAAAAAAAAABlAAsAAAAAAAAAAABmAAsAAAAAAAAAAABnAAsAAAAAAAAAAABwAAsAAAAAAAAAAABxAAsAAAAAAAAAAAByAAsAAAAAAAAAAABzAAsAAAAAAAAAAAB0AAsAAAAAAAAAAABcAAoAAAAAAAAAAABcAAkAAAAAAAAAAABcAAQAAAAAAAAAAABcAAUAAAAAAAAAAABcAAMAAAAAAAAAAABcAAIAAAAAAAAAAABcAAEAAAAAAAAAAABcAAAAAAAAAAAAAABcAP//AAAAAAAAAABcAP7/AAAAAAAAAABcAP3/AAAAAAAAAABHAAgAAAAAAAAAAABIAAgAAAAAAAAAAABJAAgAAAAAAAAAAABKAAgAAAAAAAAAAABLAAgAAAAAAAAAAABMAAgAAAAAAAAAAABNAAgAAAAAAAAAAABOAAgAAAAAAAAAAABdAP3/AAAAAAAAAABeAP3/AAAAAAAAAABfAP3/AAAAAAAAAABgAP3/AAAAAAAAAABhAP3/AAAAAAAAAABiAP3/AAAAAAAAAABjAP3/AAAAAAAAAABkAP3/AAAAAAAAAABkAPP/AAAAAAAAAABkAPL/AAAAAAAAAABkAPH/AAAAAAAAAABkAPD/AAAAAAAAAABkAO//AAAAAAAAAABkAO7/AAAAAAAAAABkAO3/AAAAAAAAAABkAOz/AAAAAAAAAABkAOv/AAAAAAAAAABkAOr/AAAAAAAAAABkAPT/AAAAAAAAAABkAPX/AAAAAAAAAABkAOn/AAAAAAAAAABkAOj/AAAAAAAAAABkAOf/AAAAAAAAAABkAOb/AAAAAAAAAABkAOX/AAAAAAAAAABkAOT/AAAAAAAAAABkAOP/AAAAAAAAAABkAOL/AAAAAAAAAABkAOH/AAAAAAAAAABkAOD/AAAAAAAAAABjAOD/AAAAAAAAAABiAOD/AAAAAAAAAABhAOD/AAAAAAAAAABgAOD/AAAAAAAAAABfAOD/AAAAAAAAAABeAOD/AAAAAAAAAABdAOD/AAAAAAAAAABcAOD/AAAAAAAAAABbAOD/AAAAAAAAAABaAOD/AAAAAAAAAABZAOD/AAAAAAAAAABYAOD/AAAAAAAAAABXAOD/AAAAAAAAAABWAOD/AAAAAAAAAABVAOD/AAAAAAAAAABUAOD/AAAAAAAAAABTAOD/AAAAAAAAAABSAOD/AAAAAAAAAABRAOD/AAAAAAAAAABQAOD/AAAAAAAAAABPAOD/AAAAAAAAAABOAOD/AAAAAAAAAABNAOD/AAAAAAAAAABMAOD/AAAAAAAAAABLAOD/AAAAAAAAAABKAOD/AAAAAAAAAABJAOD/AAAAAAAAAABIAOD/AAAAAAAAAABHAOD/AAAAAAAAAABGAOD/AAAAAAAAAABFAOD/AAAAAAAAAABEAOD/AAAAAAAAAABDAOD/AAAAAAAAAABCAOD/AAAAAAAAAABBAOD/AAAAAAAAAABAAOD/AAAAAAAAAAA/AOD/AAAAAAAAAAA+AOD/AAAAAAAAAAA9AOD/AAAAAAAAAAA8AOD/AAAAAAAAAAA7AOD/AAAAAAAAAAA6AOD/AAAAAAAAAAA5AOD/AAAAAAAAAAA4AOD/AAAAAAAAAAA3AOD/AAAAAAAAAAA2AOD/AAAAAAAAAAA1AOD/AAAAAAAAAAA0AOD/AAAAAAAAAAAzAOD/AAAAAAAAAAAyAOD/AAAAAAAAAAAxAOD/AAAAAAAAAAAwAOD/AAAAAAAAAAAvAOD/AAAAAAAAAAAuAOD/AAAAAAAAAAAtAOD/AAAAAAAAAAAtAOH/AAAAAAAAAAAtAOL/AAAAAAAAAAAtAOP/AAAAAAAAAAAtAOT/AAAAAAAAAAAtAOX/AAAAAAAAAAAtAOb/AAAAAAAAAAAtAOf/AAAAAAAAAAAtAOj/AAAAAAAAAABGAOj/AAAAAAAAAABGAOf/AAAAAAAAAABGAOH/AAAAAAAAAABGAOL/AAAAAAAAAABGAOP/AAAAAAAAAABWAPb/AAAAAAAAAABHAPX/AAAAAAAAAABHAPH/AAAAAAAAAABHAPD/AAAAAAAAAABnAAwAAAAAAAAAAABnAA0AAAAAAAAAAABnAA4AAAAAAAAAAABnAA8AAAAAAAAAAABnABAAAAAAAAAAAABnABEAAAAAAAAAAABnABIAAAAAAAAAAABnABMAAAAAAAAAAABnABQAAAAAAAAAAABnABUAAAAAAAAAAABnABYAAAAAAAAAAABnABcAAAAAAAAAAABnABgAAAAAAAAAAABnABkAAAAAAAAAAABnABoAAAAAAAAAAABnABsAAAAAAAAAAABvABsAAAAAAAAAAABvABoAAAAAAAAAAABvABkAAAAAAAAAAABvABgAAAAAAAAAAABvABcAAAAAAAAAAABvABYAAAAAAAAAAABvABUAAAAAAAAAAABvABQAAAAAAAAAAABvABMAAAAAAAAAAABvABIAAAAAAAAAAABvABEAAAAAAAAAAABvABAAAAAAAAAAAABvAA8AAAAAAAAAAABvAA4AAAAAAAAAAABvAA0AAAAAAAAAAABvAAwAAAAAAAAAAABuABsAAAAAAAAAAABtABsAAAAAAAAAAABsABsAAAAAAAAAAABrABsAAAAAAAAAAABqABsAAAAAAAAAAABpABsAAAAAAAAAAABoABsAAAAAAAAAAABvAAsAAAAAAAAAAABOAPj/AAAAAAAAAABPAPj/AAAAAAAAAABQAPj/AAAAAAAAAABRAPj/AAAAAAAAAABSAPj/AAAAAAAAAABTAPj/AAAAAAAAAABUAPj/AAAAAAAAAABVAPj/AAAAAAAAAABWAPj/AAAAAAAAAABWAPf/AAAAAAAAAABbAP3/AAAAAAAAAABaAP3/AAAAAAAAAABZAP3/AAAAAAAAAABYAP3/AAAAAAAAAABXAP3/AAAAAAAAAABWAP3/AAAAAAAAAABWAPz/AAAAAAAAAABWAPv/AAAAAAAAAABWAPr/AAAAAAAAAABWAPn/AAAAAAAAAABHAPP/AAAAAAAAAABHAPT/AAAAAAAAAAB1AAsAAAAAAAAAAAB2AAsAAAAAAAAAAAB3AAsAAAAAAAAAAAB4AAsAAAAAAAAAAAB5AAsAAAAAAAAAAAB6AAsAAAAAAAAAAAB7AAsAAAAAAAAAAAB8AAsAAAAAAAAAAAB8AAoAAAAAAAAAAAB8AAkAAAAAAAAAAAB8AAgAAAAAAAAAAAB8AAcAAAAAAAAAAAB8AAYAAAAAAAAAAAB8AAUAAAAAAAAAAAB8AAQAAAAAAAAAAAB8AP7/AAAAAAAAAAB8AP3/AAAAAAAAAAB8APz/AAAAAAAAAAB8APv/AAAAAAAAAAB8APr/AAAAAAAAAAB8AP//AAAAAAAAAAB8AAAAAAAAAAAAAAB8AAEAAAAAAAAAAAB8AAIAAAAAAAAAAAB8AAMAAAAAAAAAAAB0AAAAAAAAAAAAAAB0AAEAAAAAAAAAAAB0AAIAAAAAAAAAAAB0AAMAAAAAAAAAAAB0AAQAAAAAAAAAAAB0AAUAAAAAAAAAAAB0AP//AAAAAAAAAABkAPb/AAAAAAAAAABlAPb/AAAAAAAAAABmAPb/AAAAAAAAAABnAPb/AAAAAAAAAABoAPb/AAAAAAAAAABpAPb/AAAAAAAAAABqAPb/AAAAAAAAAABrAPb/AAAAAAAAAABsAPb/AAAAAAAAAABtAPb/AAAAAAAAAABuAPb/AAAAAAAAAABvAPb/AAAAAAAAAABwAPb/AAAAAAAAAABxAPb/AAAAAAAAAAByAPb/AAAAAAAAAABzAPb/AAAAAAAAAAB0APb/AAAAAAAAAAB1APb/AAAAAAAAAAB2APb/AAAAAAAAAAB3APb/AAAAAAAAAAB4APb/AAAAAAAAAAB5APb/AAAAAAAAAAB6APb/AAAAAAAAAAB7APb/AAAAAAAAAAB8APb/AAAAAAAAAAB8APf/AAAAAAAAAAB8APj/AAAAAAAAAAB8APn/AAAAAAAAAABrAP3/AAAAAAAAAABsAP3/AAAAAAAAAABtAP3/AAAAAAAAAABuAP3/AAAAAAAAAABvAP3/AAAAAAAAAABwAP3/AAAAAAAAAABxAP3/AAAAAAAAAAByAP3/AAAAAAAAAABzAP3/AAAAAAAAAAB0AP3/AAAAAAAAAAB0AP7/AAAAAAAAAABVAO3/AAAAAAAAAABVAO7/AAAAAAAAAABVAO//AAAAAAAAAABVAPD/AAAAAAAAAABVAPH/AAAAAAAAAABVAPL/AAAAAAAAAABVAPP/AAAAAAAAAABVAOz/AAAAAAAAAABVAOv/AAAAAAAAAABcAOb/AAAAAAAAAABcAOf/AAAAAAAAAABcAOj/AAAAAAAAAABcAOn/AAAAAAAAAABcAOr/AAAAAAAAAABcAOv/AAAAAAAAAABcAOz/AAAAAAAAAABcAO3/AAAAAAAAAABcAO7/AAAAAAAAAABcAO//AAAAAAAAAABcAPD/AAAAAAAAAABcAPH/AAAAAAAAAABcAPL/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_afr0m")

[node name="Foreground KILL" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AABoAAsAAQAAAAAAAFBoAAwAAQACAAAAAFBoAA0AAQACAAAAAFBoAA4AAQACAAAAAFBoAA8AAQACAAAAAFBoABAAAQACAAAAAFBoABEAAQACAAAAAFBoABIAAQACAAAAAFBoABMAAQACAAAAAFBoABQAAQACAAAAAFBoABUAAQACAAAAAFBoABYAAQACAAAAAFBoABcAAQACAAAAAFBoABgAAQACAAAAAFBoABkAAQACAAAAAFBoABoAAQAAAAEAAABpABoAAQACAAAAAABqABoAAQACAAAAAABrABoAAQACAAAAAABsABoAAQACAAAAAABtABoAAQACAAAAAABuABoAAQABAAEAAABuABkAAQACAAAAAGBuABgAAQACAAAAAGBuABcAAQACAAAAAGBuABYAAQACAAAAAGBuABUAAQACAAAAAGBuABQAAQACAAAAAGBuABMAAQACAAAAAGBuABIAAQACAAAAAGBuABEAAQACAAAAAGBuABAAAQACAAAAAGBuAA8AAQACAAAAAGBuAA4AAQACAAAAAGBuAA0AAQACAAAAAGBuAAwAAQACAAAAAGBuAAsAAQABAAAAAGBWAOz/AQAAAAAAAFBWAO3/AQACAAAAAFBWAO7/AQACAAAAAFBWAO//AQACAAAAAFBWAPD/AQACAAAAAFBWAPH/AQACAAAAAFBWAPL/AQABAAAAAFA=")
tile_set = SubResource("TileSet_kx11y")
script = ExtResource("5_nvpf4")

[node name="Background" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_t3cor")

[node name="slideboosting" type="Area2D" parent="Background"]
texture_filter = 1
position = Vector2(2062, -188)
metadata/_edit_group_ = true

[node name="SLIDEBOOSTING" type="RichTextLabel" parent="Background/slideboosting"]
visible = false
z_index = -1
offset_right = 173.0
offset_bottom = 71.0
text = "Press Space when crouched
CHANGES DIRECTION
"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Background/slideboosting"]
z_index = -1
position = Vector2(49, 14)
scale = Vector2(5.875, 4.3125)
texture = ExtResource("6_yh1vv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/slideboosting"]
position = Vector2(136, -96)
shape = SubResource("RectangleShape2D_f3sfa")

[node name="basic controls" type="Area2D" parent="Background"]
metadata/_edit_group_ = true

[node name="BASIC CONTROLS" type="RichTextLabel" parent="Background/basic controls"]
visible = false
z_index = -1
offset_left = 124.0
offset_top = -96.0
offset_right = 278.0
offset_bottom = 40.0
text = "A-D controls movement
Space  = jump
S = sliding"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/basic controls"]
position = Vector2(501.5, -45.5)
shape = SubResource("RectangleShape2D_x1poa")

[node name="Sprite2D" type="Sprite2D" parent="Background/basic controls"]
z_index = -1
texture_filter = 1
position = Vector2(212, -29)
scale = Vector2(3.59375, 3.375)
texture = ExtResource("7_qkgh4")

[node name="respawn" type="Area2D" parent="Background"]
position = Vector2(414, 111)
metadata/_edit_group_ = true

[node name="RESPAWN" type="RichTextLabel" parent="Background/respawn"]
visible = false
offset_right = 256.0
offset_bottom = 50.0
text = "Press R or fall out of the map to respawn back to start"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/respawn"]
position = Vector2(113, 69.5)
shape = SubResource("RectangleShape2D_a1w1g")

[node name="Sprite2D" type="Sprite2D" parent="Background/respawn"]
z_index = -1
texture_filter = 1
position = Vector2(111, 52)
scale = Vector2(6.875, 5.63281)
texture = ExtResource("6_yh1vv")

[node name="kill blocks" type="Area2D" parent="Background"]
position = Vector2(3361, 267)
metadata/_edit_group_ = true

[node name="GREY BLOCKS" type="RichTextLabel" parent="Background/kill blocks"]
visible = false
z_index = -1
offset_right = 215.0
offset_bottom = 131.0
text = "GRAY
Kills you on contact"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/kill blocks"]
position = Vector2(-9.5, -46)
shape = SubResource("RectangleShape2D_5orsn")

[node name="Sprite2D" type="Sprite2D" parent="Background/kill blocks"]
z_index = -1
texture_filter = 1
position = Vector2(80.9999, -37)
scale = Vector2(3.84376, 4.17187)
texture = ExtResource("8_1vcgl")

[node name="pencilling" type="Area2D" parent="Background"]
metadata/_edit_group_ = true

[node name="PENCILING" type="RichTextLabel" parent="Background/pencilling"]
visible = false
z_index = -1
offset_left = 1228.0
offset_top = -135.0
offset_right = 1431.0
offset_bottom = 53.0
text = "PENCILING

Press S midair to halt your vertical momentum 
THIS IS UNAPPLICABLE IF YOU'RE FALLING TOO FAST"
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/pencilling"]
position = Vector2(1303.5, -54)
shape = SubResource("RectangleShape2D_mbw34")

[node name="Sprite2D" type="Sprite2D" parent="Background/pencilling"]
z_index = -1
texture_filter = 1
position = Vector2(1318, -68)
scale = Vector2(4.09375, 4.3125)
texture = ExtResource("9_5a6xm")

[node name="walljump" type="Area2D" parent="Background"]
metadata/_edit_group_ = true

[node name="WALLJUMPING" type="RichTextLabel" parent="Background/walljump"]
visible = false
z_index = -1
offset_left = 1524.0
offset_top = 136.0
offset_right = 1693.0
offset_bottom = 309.0
text = "WALLJUMPING

Press Space while holding A/D midair and touching a wall
CHAINABLE"
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/walljump"]
position = Vector2(1633.5, -165)
shape = SubResource("RectangleShape2D_7tciq")

[node name="Sprite2D" type="Sprite2D" parent="Background/walljump"]
z_index = -1
texture_filter = 1
position = Vector2(1574, 194)
scale = Vector2(4.20312, 4.875)
texture = ExtResource("7_qkgh4")

[node name="Portal to proper level 1 VARIANT" parent="." instance=ExtResource("5_l14ja")]
position = Vector2(1597, -800)

[connection signal="body_entered" from="Background/slideboosting" to="." method="_on_slideboosting_body_entered"]
[connection signal="body_exited" from="Background/slideboosting" to="." method="_on_slideboosting_body_exited"]
[connection signal="body_entered" from="Background/basic controls" to="." method="_on_basic_controls_body_entered"]
[connection signal="body_exited" from="Background/basic controls" to="." method="_on_basic_controls_body_exited"]
[connection signal="body_entered" from="Background/respawn" to="." method="_on_respawn_body_entered"]
[connection signal="body_exited" from="Background/respawn" to="." method="_on_respawn_body_exited"]
[connection signal="body_entered" from="Background/kill blocks" to="." method="_on_kill_blocks_body_entered"]
[connection signal="body_exited" from="Background/kill blocks" to="." method="_on_kill_blocks_body_exited"]
[connection signal="body_entered" from="Background/pencilling" to="." method="_on_pencilling_body_entered"]
[connection signal="body_exited" from="Background/pencilling" to="." method="_on_pencilling_body_exited"]
[connection signal="body_entered" from="Background/walljump" to="." method="_on_walljump_body_entered"]
[connection signal="body_exited" from="Background/walljump" to="." method="_on_walljump_body_exited"]
